# nicewebrl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  run_experiment.py  setup.py  test.ipynb
examples/catch/: catch.py  experiment_structure.py  web_app.py
examples/cec/: counter_circuit_experiment.py  web_app.py
examples/craftax/: README.md  experiment_structure.py  fly.toml  web_app.py
examples/crafter/: README.md  dynax.py  environment.py  experiment.py  experiment_structure.py  models.py  web_app.py
examples/crafter/.nicegui/: storage-user-547bb487-06b5-4bbf-aa74-5fbdebfd2ddd.json
examples/dual_destination-CEC/: README.md  actor_networks.py  experiment.py  web_app.py
examples/dual_destination-CEC/misc/: consent.md
examples/dual_destination-CEC/toy_env/: __init__.py
examples/human_AI_coordination/: README.md  experiment.py  models.py
examples/human_AI_coordination/misc/: toyCoop_config.yaml
examples/human_AI_coordination/toy_env/: toy_coop.py  toy_coop_jitted_visualizer.py
examples/human_LLM_coordination/: experiment_structure.py  shared_state.py  web_app_Gemini.py  web_app_Local.py
examples/minigrid/: README.md  simulation.py
examples/minigrid-LLM-assistant/: experiment_structure.py  pyproject.toml  web_app_Gemini.py  web_app_Local.py
examples/minigrid-ppo/: experiment_structure.py  requirements.txt  test.py  web_app.py
examples/overcooked/: README.md  data_analysis.ipynb  environment.py  example_data.msgpack  rendering.py  web_app.py
examples/overcooked-CEC/: actor_networks.py  consent.md  models.py  overcooked_config.yaml
examples/overcooked-cross_environment_cooperation/: .gitignore  README.md  analysis.py  coord_ring_experiment.py
examples/overcooked.py/: experiment.py  rendering.py  web_app.py
examples/xland/: Dockerfile  env_state.txt  experiment_structure.py  requirements.txt  web_app_anonymizedAI.py  web_app_chooseAI.py
examples/xland-LLM-assistant/: .gitignore  Dockerfile  README.md  consent.md  data_analysis.ipynb  download_google_data.py  env_state.txt  example_config.py  experiment_structure.py  fly.toml  google_cloud_utils.py  upload_google_data.py  web_app_anonymizedAI.py  web_app_assistant.py  web_app_chooseAI.py
examples/xland-minigrid/: Dockerfile  README.md  experiment_structure.py  fly.toml  web_app.py
examples/xland-minigrid/craftax_cache/: texture_cache.pbz2
nicewebrl/: __init__.py  basics.js  container.py  data_analysis.py  dataframe.py  experiment.py  logging.py  multihuman_basics.js  multihuman_stages.py  nicejax.py  run_experiment.py  stages.py  utils.py
ppo-minigrid/: main.py  simulation.py  test.py
ppo-minigrid/configs/: default.yaml
ppo-minigrid/envs/: environment.py
ppo-minigrid/models/: __init__.py  rnn_policy.py
ppo-minigrid/training/: ppo.py
ppo-minigrid/wandb/latest-run/: run-i1n8nc2h.wandb
ppo-minigrid/wandb/run-20250202_200314-0r68l3q0/: run-0r68l3q0.wandb
ppo-minigrid/wandb/run-20250202_200424-53lynv6v/: run-53lynv6v.wandb
ppo-minigrid/wandb/run-20250202_200511-jploskga/: run-jploskga.wandb
ppo-minigrid/wandb/run-20250202_200617-fxg0xgy2/: run-fxg0xgy2.wandb
ppo-minigrid/wandb/run-20250202_200656-af82q629/: run-af82q629.wandb
ppo-minigrid/wandb/run-20250202_200750-sdndgvnz/: run-sdndgvnz.wandb
ppo-minigrid/wandb/run-20250202_200843-hwwa9co4/: run-hwwa9co4.wandb
ppo-minigrid/wandb/run-20250202_201231-ywcxvam3/: run-ywcxvam3.wandb
ppo-minigrid/wandb/run-20250202_201457-hvr8z34m/: run-hvr8z34m.wandb
ppo-minigrid/wandb/run-20250202_201844-87xayfc1/: run-87xayfc1.wandb
ppo-minigrid/wandb/run-20250202_201927-3eg9v28w/: run-3eg9v28w.wandb
ppo-minigrid/wandb/run-20250202_213651-hthmg7k8/: run-hthmg7k8.wandb
ppo-minigrid/wandb/run-20250202_213805-6bstcuit/: run-6bstcuit.wandb
ppo-minigrid/wandb/run-20250202_214540-p660dezg/: run-p660dezg.wandb
ppo-minigrid/wandb/run-20250202_214637-f6rm96qd/: run-f6rm96qd.wandb
ppo-minigrid/wandb/run-20250202_220056-ul4qyosa/: run-ul4qyosa.wandb
ppo-minigrid/wandb/run-20250202_220135-fm9zbmn9/: run-fm9zbmn9.wandb
ppo-minigrid/wandb/run-20250202_220244-wwv9roch/: run-wwv9roch.wandb
ppo-minigrid/wandb/run-20250202_220308-oxmg6w49/: run-oxmg6w49.wandb
ppo-minigrid/wandb/run-20250202_221631-ycj3je0c/: run-ycj3je0c.wandb
ppo-minigrid/wandb/run-20250202_221746-gw7d233m/: run-gw7d233m.wandb
ppo-minigrid/wandb/run-20250202_222200-y68iwjag/: run-y68iwjag.wandb
ppo-minigrid/wandb/run-20250202_222546-752lng5s/: run-752lng5s.wandb
ppo-minigrid/wandb/run-20250202_222625-1yesds0v/: run-1yesds0v.wandb
ppo-minigrid/wandb/run-20250202_222716-3sja7bit/: run-3sja7bit.wandb
ppo-minigrid/wandb/run-20250202_222755-o7t509lf/: run-o7t509lf.wandb
ppo-minigrid/wandb/run-20250202_222848-ibnjxmda/: run-ibnjxmda.wandb
ppo-minigrid/wandb/run-20250202_222941-q9iikubk/: run-q9iikubk.wandb
ppo-minigrid/wandb/run-20250202_223033-rkslr6hg/: run-rkslr6hg.wandb
ppo-minigrid/wandb/run-20250202_223111-yu5kkshm/: run-yu5kkshm.wandb
ppo-minigrid/wandb/run-20250202_223205-tyxwonsh/: run-tyxwonsh.wandb
ppo-minigrid/wandb/run-20250202_223241-iofik6fo/: run-iofik6fo.wandb
ppo-minigrid/wandb/run-20250202_223324-eru2bgkn/: run-eru2bgkn.wandb
ppo-minigrid/wandb/run-20250202_223407-tz07vsam/: run-tz07vsam.wandb
ppo-minigrid/wandb/run-20250202_223438-ftqth92q/: run-ftqth92q.wandb
ppo-minigrid/wandb/run-20250202_223526-dorzjwuj/: run-dorzjwuj.wandb
(+114 files in other folders)
